--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,4 +7,138 @@
         <item name="android:colorAccent">@color/theme_accent</item>
         <item name="android:statusBarColor">@color/theme_primary_dark</item>
     </style>
+
+    <!-- BUTTONS -->
+    <style name="Button" parent="@android:style/Widget.Button">
+        <item name="android:background">@drawable/button_grey_background</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:paddingTop">15dp</item>
+        <item name="android:paddingBottom">15dp</item>
+        <item name="android:paddingRight">15dp</item>
+        <item name="android:paddingLeft">15dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:textAllCaps">true</item>
+    </style>
+
+    <style name="ButtonWhiteBlue" parent="@style/Button">
+        <item name="android:background">@drawable/button_blue_background</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="ButtonWhitePink" parent="@style/Button">
+        <item name="android:background">@drawable/button_pink_transparent_background</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <!-- TEXT REGULAR -->
+    <style name="TextRegular">
+        <item name="android:fontFamily">sans-serif</item>
+    </style>
+
+    <style name="TextRegular14" parent="@style/TextRegular">
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="TextRegular16" parent="@style/TextRegular">
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="TextRegular14BlueLight" parent="@style/TextRegular14">
+        <item name="android:textColor">@color/blue_light</item>
+    </style>
+
+    <style name="TextRegular14BlueDark" parent="@style/TextRegular14">
+        <item name="android:textColor">@color/blue_dark</item>
+    </style>
+
+    <style name="TextRegular14GreenLight" parent="@style/TextRegular14">
+        <item name="android:textColor">@color/green_light</item>
+    </style>
+
+    <style name="TextRegular14GreenDark" parent="@style/TextRegular14">
+        <item name="android:textColor">@color/green_dark</item>
+    </style>
+
+    <style name="TextRegular16BlueLight" parent="@style/TextRegular16">
+        <item name="android:textColor">@color/blue_light</item>
+    </style>
+
+    <style name="TextRegular16BlueDark" parent="@style/TextRegular16">
+        <item name="android:textColor">@color/blue_dark</item>
+    </style>
+
+    <style name="TextRegular16GreenLight" parent="@style/TextRegular16">
+        <item name="android:textColor">@color/green_light</item>
+    </style>
+
+    <style name="TextRegular16GreenDark" parent="@style/TextRegular16">
+        <item name="android:textColor">@color/green_dark</item>
+    </style>
+
+    <!-- TEXT LIGHT -->
+    <style name="TextLight">
+        <item name="android:fontFamily">sans-serif-light</item>
+    </style>
+
+    <!-- TEXT BOLD -->
+    <style name="TextBold">
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="TextBold14" parent="@style/TextBold">
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="TextBold16" parent="@style/TextBold">
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="TextBold14BlueLight" parent="@style/TextBold14">
+        <item name="android:textColor">@color/blue_light</item>
+    </style>
+
+    <style name="TextBold14BlueDark" parent="@style/TextBold14">
+        <item name="android:textColor">@color/blue_dark</item>
+    </style>
+
+    <style name="TextBold14GreenLight" parent="@style/TextBold14">
+        <item name="android:textColor">@color/green_light</item>
+    </style>
+
+    <style name="TextBold14GreenDark" parent="@style/TextBold14">
+        <item name="android:textColor">@color/green_dark</item>
+    </style>
+
+    <style name="TextBold14Red" parent="@style/TextBold14">
+        <item name="android:textColor">@color/red</item>
+    </style>
+
+    <style name="TextBold16BlueLight" parent="@style/TextBold16">
+        <item name="android:textColor">@color/blue_light</item>
+    </style>
+
+    <style name="TextBold16BlueDark" parent="@style/TextBold16">
+        <item name="android:textColor">@color/blue_dark</item>
+    </style>
+
+    <style name="TextBold16GreenLight" parent="@style/TextBold16">
+        <item name="android:textColor">@color/green_light</item>
+    </style>
+
+    <style name="TextBold16GreenDark" parent="@style/TextBold16">
+        <item name="android:textColor">@color/green_dark</item>
+    </style>
+
+    <!-- TITLE (HEADER) -->
+    <style name="TitleLight" parent="TextLight">
+        <item name="android:textSize">@dimen/header_big_text_size</item>
+    </style>
+
+    <style name="TitleLightPrimary" parent="TitleLight">
+        <item name="android:textColor">@color/theme_primary</item>
+    </style>
+
 </resources>
