--- a/app/src/main/res/layout/view_calibration_step.xml
+++ b/app/src/main/res/layout/view_calibration_step.xml
@@ -2,8 +2,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:background="@color/background"
-    android:gravity="center_horizontal"
-    android:orientation="vertical"
     android:paddingLeft="@dimen/main_padding"
     android:paddingRight="@dimen/main_padding">
 
@@ -21,8 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/instruction_image"
-        android:text="@string/step_1"
-        android:textIsSelectable="false" />
+        android:text="@string/step_1" />
 
     <TextView
         android:id="@+id/instructions"
@@ -30,8 +27,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/current_step"
-        android:layout_marginTop="@dimen/main_small_text_below_heading_margin_top"
+        android:layout_marginTop="@dimen/main_small_text_below_heading_margin"
         android:text="@string/msg_block" />
+
+    <TextView
+        android:id="@+id/error_notice"
+        style="@style/TextRegular14PinkDark"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/instructions"
+        android:layout_marginTop="@dimen/main_small_text_below_heading_margin"
+        android:text="@string/msg_fail_block" />
 
     <ProgressBar
         android:id="@+id/progress_bar"
@@ -41,7 +47,7 @@
         android:layout_above="@+id/button"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="@dimen/main_margin"
-        android:visibility="invisible" />
+        android:indeterminate="true" />
 
     <Button
         android:id="@+id/button"
@@ -52,4 +58,5 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="@dimen/main_margin"
         android:text="@string/next" />
+
 </RelativeLayout>
