Use a small padding for the app header to avoid full size title
Change-Id: I8bc92744f776731d526e43fe3ce3e274c16ad284

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
     <dimen name="header_small_height">56dp</dimen>
     <dimen name="header_big_text_size">34sp</dimen>
     <dimen name="header_small_text_size">20sp</dimen>
+    <dimen name="header_padding">8sp</dimen>
 
     <!-- MAIN -->
     <dimen name="main_margin">32dp</dimen>
