--- a/app/src/main/res/layout/header_app.xml
+++ b/app/src/main/res/layout/header_app.xml
@@ -8,6 +8,8 @@
         style="@style/TitleLightPrimary"
         android:layout_width="match_parent"
         android:layout_height="@dimen/header_big_height"
+        android:paddingStart="@dimen/header_padding"
+        android:paddingEnd="@dimen/header_padding"
         android:ellipsize="end"
         android:gravity="center_vertical|center_horizontal"
         android:lines="2"
