--- a/app/src/main/res/layout/view_calibration_step.xml
+++ b/app/src/main/res/layout/view_calibration_step.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:background="@color/background"
     android:paddingLeft="@dimen/main_padding"
     android:paddingRight="@dimen/main_padding">
 
@@ -11,7 +10,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/top_image_psensor" />
+        android:src="@drawable/top_image_psensor"
+        android:contentDescription="@string/instruction_image_desc" />
 
     <TextView
         android:id="@+id/current_step"
