--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="android:colorPrimaryDark">@color/theme_primary_dark</item>
         <item name="android:colorAccent">@color/theme_accent</item>
         <item name="android:statusBarColor">@color/theme_primary_dark</item>
+        <item name="android:background">@color/background</item>
     </style>
 
     <!-- BUTTONS -->
